смена дизайна. Картинки вместо галочек на выполненных полях

--- a/ToDOList/Base.lproj/Main.storyboard
+++ b/ToDOList/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="mfx-wG-M42" style="IBUITableViewCellStyleDefault" id="rbn-hu-jhe">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="mfx-wG-M42" imageView="1pZ-Oo-Xmx" style="IBUITableViewCellStyleDefault" id="rbn-hu-jhe">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rbn-hu-jhe" id="4du-CD-qVp">
@@ -25,12 +25,16 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mfx-wG-M42">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="69" y="0.0" width="325" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="uncheck" id="1pZ-Oo-Xmx">
+                                            <rect key="frame" x="20" y="0.0" width="34" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -47,7 +51,7 @@
                                     <action selector="pushAddAction:" destination="tjC-Pc-XR2" id="ccm-I7-LOb"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="Item" systemItem="edit" id="rcN-6x-Ok7">
+                            <barButtonItem systemItem="edit" id="rcN-6x-Ok7">
                                 <connections>
                                     <action selector="pushEditAction:" destination="tjC-Pc-XR2" id="VXE-a1-VaK"/>
                                 </connections>
@@ -79,6 +83,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="uncheck" width="380" height="492"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
